update proj stuct + add post api
